apps/base/reposilite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reposilite
  namespace: reposilite
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - secretName: bacherik-reposilite-tls
      hosts:
        - reposilite.bacherik.de
    - secretName: nikoverflow-reposilite-tls
      hosts:
        - reposilite.nikoverflow.com
  rules:
    - host: "reposilite.bacherik.de"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reposilite
              port:
                name: http
    - host: "reposilite.nikoverflow.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reposilite
              port:
                name: http
